[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=3]
[ext_resource path="res://menu/battle_menu/ui/ui.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/checkbox_off.png" type="Texture" id=5]
[ext_resource path="res://menu/battle_menu/ui/select_map_option/select_map_option.tscn" type="PackedScene" id=6]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea"]
margin_right = 600.0
margin_bottom = 1024.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_right = 600.0
margin_bottom = 80.0

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_right = 4.0
margin_bottom = 80.0
rect_min_size = Vector2( 4, 0 )

[node name="back" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 8.0
margin_right = 108.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 112.0
margin_top = 29.0
margin_right = 484.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Map Editor"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 488.0
margin_right = 588.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 8 )

[node name="label2" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 96.0
margin_right = 600.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "Map"
align = 1
valign = 1

[node name="map" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 121.0
margin_right = 600.0
margin_bottom = 421.0
rect_min_size = Vector2( 0, 300 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map"]
margin_right = 600.0
margin_bottom = 300.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map"]
margin_right = 600.0
margin_bottom = 300.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 250.0
alignment = 1

[node name="map_image" type="TextureRect" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 316.0
margin_bottom = 200.0
rect_min_size = Vector2( 12, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 500.0
margin_bottom = 200.0

[node name="map_name" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "map name : -"
valign = 1

[node name="map_size" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 180.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "size : -"
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 180.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 12 )
size_flags_vertical = 3

[node name="change_map" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 200.0
rect_min_size = Vector2( 180, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Change Map"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 425.0
margin_right = 600.0
margin_bottom = 433.0
rect_min_size = Vector2( 0, 8 )

[node name="label" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 437.0
margin_right = 600.0
margin_bottom = 458.0
custom_fonts/font = ExtResource( 2 )
text = "Players"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 462.0
margin_right = 600.0
margin_bottom = 912.0
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3"]
margin_right = 600.0
margin_bottom = 450.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3"]
margin_right = 600.0
margin_bottom = 450.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer"]
margin_right = 600.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="team_list" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer/VBoxContainer"]
margin_right = 600.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 600.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 24 )

[node name="add_player" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer/VBoxContainer"]
margin_left = 150.0
margin_top = 32.0
margin_right = 450.0
margin_bottom = 92.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Add Player"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 600.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 50 )

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 916.0
margin_right = 600.0
margin_bottom = 924.0
rect_min_size = Vector2( 0, 8 )

[node name="battle" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_left = 100.0
margin_top = 928.0
margin_right = 500.0
margin_bottom = 1008.0
rect_min_size = Vector2( 400, 80 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "BATTLE!"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 1012.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 12 )

[node name="select_map_option" parent="CanvasLayer/Control" instance=ExtResource( 6 )]

[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/map/VBoxContainer/HBoxContainer/VBoxContainer/change_map" to="." method="_on_change_map_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/MarginContainer3/ScrollContainer/VBoxContainer/add_player" to="." method="_on_add_player_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/battle" to="." method="_on_battle_pressed"]
[connection signal="on_select_map" from="CanvasLayer/Control/select_map_option" to="." method="_on_select_map_option_on_select_map"]
